# ampl

./: CMakeLists.txt  README.md  todo.org
src/: main.cpp  tests.cpp
src/ampl/: ampl.hpp  compare.hpp  env.hpp  error.cpp  error.hpp  eval.cpp  form.cpp  form.hpp  frame.cpp  frame.hpp  func.cpp  func.hpp  lib.cpp  lib.hpp  macro.cpp  macro.hpp  op.cpp  op.hpp  pos.cpp  pos.hpp  proc.hpp  rbuf.hpp  reader.cpp  reader.hpp  scope.cpp  scope.hpp  stack.cpp  stack.hpp  sym.cpp  sym.hpp  timer.hpp  type.cpp  type.hpp  types.hpp  val.cpp  val.hpp  vm.cpp  vm.hpp
src/ampl/forms/: group.cpp  group.hpp  id.cpp  id.hpp  lit.cpp  lit.hpp  nop.cpp  nop.hpp  ref.cpp  ref.hpp
src/ampl/libs/: abc.cpp  abc.hpp  math.cpp  math.hpp
